# RendererParallel

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.cuh  Examples.hpp  Global.cuh  Render.cuh  Structs.cuh
include/SDL2/: SDL_assert.h  SDL_haptic.h  SDL_hints.h  SDL_image.h  SDL_log.h  SDL_misc.h  SDL_rwops.h  SDL_test.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_crc32.h  SDL_test_font.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_images.h  SDL_test_log.h  SDL_test_md5.h  SDL_test_memory.h  SDL_test_random.h  SDL_thread.h  SDL_ttf.h  SDL_video.h
include/basic/: Color3.cuh  Point3.cuh  Ray.cuh  Vec3.cuh
include/box/: BVHTree.cuh  BoundingBox.cuh
include/hittable/: Box.cuh  Parallelogram.cuh  Sphere.cuh  Transform.cuh  Triangle.cuh
include/material/: Dielectric.cuh  DiffuseLight.cuh  Metal.cuh  Rough.cuh
include/pdf/: CosinePDF.cuh  HittablePDF.cuh  MixturePDF.cuh
include/util/: Matrix.cuh  OrthonormalBase.cuh  Pair.cuh  Range.cuh
src/: Camera.cu  Examples.cu  Global.cu  Kernel.cu  Main.cu  Render.cu
src/util/: Matrix.cu
